major test refactor